--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,11 @@ body {
   background-color: rgb(144, 192, 234);
 }
 
+.container {
+  max-width: 1400px;
+  margin: 0 auto;
+}
+
 header {
   background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.4)),
     url("../photos/kyoto.jpeg");
@@ -12,11 +17,6 @@ header {
   text-align: center;
   padding: 200px 0;
   margin: 0;
-}
-
-.container {
-  max-width: 1400px;
-  margin: 0 auto;
 }
 
 header h1 {
@@ -54,7 +54,42 @@ header a {
   border-radius: 5px;
 }
 
-@media (max-width: 900px) {
+section {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 2fr 2fr;
+}
+footer {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+    url("../photos/Tatsumi-Bridge.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 100px;
+  color: aliceblue;
+}
+
+footer p {
+  font-weight: 400px;
+  font-size: 16px;
+  line-height: 24px;
+  opacity: 0.7;
+}
+footer ul {
+  padding: 0;
+}
+footer li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+footer a {
+  color: white;
+  opacity: 0.7;
+}
+@media (max-width: 960px) {
   header {
     padding: 60px 0;
   }
