--- a/src/style.css
+++ b/src/style.css
@@ -18,7 +18,37 @@ header {
   padding: 200px 0;
   margin: 0;
 }
-
+main {
+  background-color: white;
+}
+.img-responsive {
+  max-width: 70%;
+}
+main h2 {
+  font-weight: 700px;
+  font-size: 19px;
+  line-height: 1.5;
+  letter-spacing: 5px;
+  color: #272044;
+  margin: 0;
+  opacity: 0.3;
+  text-transform: uppercase;
+}
+main h3 {
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 1.5;
+  margin: 0;
+  color: #272044;
+}
+main p {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #272044;
+  opacity: 0.7;
+}
 header h1 {
   font-weight: 700;
   font-size: 96px;
@@ -39,6 +69,7 @@ header h3 {
   line-height: 1.5;
   margin: 0;
 }
+
 header a {
   font-weight: 700;
   letter-spacing: 3px;
@@ -53,15 +84,23 @@ header a {
   text-align: center;
   border-radius: 5px;
 }
+
 .grid {
   display: grid;
-  grid-template-columns: 1fr 2fr 2fr;
-  grid-gap: 65px;
+  grid-gap: 62px;
+}
+.grid-2-columns {
+  grid-template-columns: 2fr 2fr;
+}
+
+.grid-3-columns {
+  grid-template-columns: 2fr 2fr 2fr;
 }
 
 section {
   max-width: 1200px;
   margin: 0 auto;
+  padding: 100px 0;
 }
 
 footer {
@@ -69,7 +108,7 @@ footer {
     url("../photos/Tatsumi-Bridge.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  padding: 100px;
+
   color: aliceblue;
 }
 
@@ -103,5 +142,12 @@ footer a {
   }
   h3 {
     font-size: 12px;
+  }
+  .grid {
+    grid-template-columns: 1fr;
+    grid-gap: 32px;
+  }
+  section {
+    padding: 30px;
   }
 }
