--- a/src/style.css
+++ b/src/style.css
@@ -22,7 +22,7 @@ main {
 }
 
 .img-responsive {
-  max-width: 70%;
+  width: 100%;
   display: block;
 }
 
@@ -127,6 +127,14 @@ header a {
 .card {
   background-color: white;
   margin-top: 30px 0;
+}
+.card-header.grid {
+  grid-gap: 0;
+}
+
+.embed {
+  width: 100%;
+  aspect-ratio: 1/1;
 }
 .card-body {
   padding: 30px;
