--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Popins", sans-serif;
-  background-color: rgb(226, 236, 245);
+  background-color: rgb(12, 12, 12);
 }
 
 .container {
@@ -38,7 +38,7 @@ main h2 {
   text-transform: uppercase;
 }
 main h3 {
-  font-weight: 700;
+  font-weight: 700px;
   font-size: 40px;
   line-height: 1.5;
   margin: 0;
@@ -108,8 +108,11 @@ header a {
 
 .text-center {
   text-align: center;
+  margin: 25px;
 }
-
+.geisha {
+  line-height: 1.6;
+}
 .grid {
   display: grid;
   grid-gap: 64px;
@@ -118,11 +121,14 @@ header a {
   grid-template-columns: 1fr 1fr;
 }
 
-.grid-3-columns {
+.grid3-columns {
   grid-template-columns: 2fr 2fr 2fr;
 }
-.grid3-columns {
-  grid-template-columns: 1fr 1fr 1fr;
+.grid-3-columns {
+  grid-template-columns: repeat(3, 1fr);
+}
+.grid-3-columns-with-first-narrow {
+  grid-template-columns: 1fr 2fr 2fr;
 }
 
 .card {
@@ -155,6 +161,34 @@ header a {
   text-decoration: none;
 }
 
+.insta {
+  background-color: #f8f8f8;
+}
+.gallery {
+  text-align: center;
+}
+.gallery-gallery-1 {
+  background-color: white;
+}
+.gallery-gallery-2 {
+  background-color: #f8f8f8;
+}
+
+.gallery h2 {
+  font-weight: 700px;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 5px;
+  color: #272044;
+  opacity: 0.3;
+  text-transform: uppercase;
+}
+.gallery h3 {
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 1.5;
+  color: #272044;
+}
 section {
   max-width: 100%;
   margin: 0 auto;
@@ -170,10 +204,10 @@ footer {
     url("../photos/Tatsumi-Bridge.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  color: aliceblue;
+  color: white;
 }
 footer h3 {
-  font-weight: 700;
+  font-weight: 700px;
   font-size: 20px;
   line-height: 30px;
 }
@@ -188,9 +222,8 @@ footer ul {
 }
 footer li {
   list-style: none;
-  margin: 0;
-  padding: 0;
   line-height: 1.5;
+  padding: 0;
 }
 footer a {
   color: white;
@@ -214,6 +247,13 @@ footer a {
     grid-template-columns: 1fr;
     grid-gap: 32px;
   }
+  .grid-2-columns img {
+    display: none;
+  }
+  .grid-2-columns p {
+    font-size: 10px;
+  }
+
   section {
     padding: 30px;
   }
